@@ -653,7 +653,7 @@ public class TestTaxonomyFacetAssociations extends FacetTestCase {
 
       assertEquals(expectedResult.dim, actualResult.dim);
       assertArrayEquals(expectedResult.path, actualResult.path);
-      assertEquals((float) expectedResult.value, (float) actualResult.value, 2e-1);
+      assertFloatUlpEquals((float) expectedResult.value, (float) actualResult.value, (short) 2);
       assertEquals(expectedResult.childCount, actualResult.childCount);
     }
   }
